// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    3
     
    expenses
     totaling 
    $1,141.95
  </h4>
</div>
`;

exports[`should correctly render ExpensesSummary component with single expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     totaling 
    $1.95
  </h4>
</div>
`;
